tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_90.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := ((((0 + 1223) MOD (+ 1223)) MOD ((200 + 200) + (x + 2))) # (+ ((1223 MOD 1) + (y * 1))));
  (* error *)  y := ((((q + y) MOD (1 * 2)) + (+ (1 * x))) - (((- 1223) DIV (200 DIV 2)) * (- (1 * z))));
               z := ((- (+ (1223 * y))) - (((1223 MOD x) + (2 - 2)) * ((2 - 1) DIV (y + 1223))));
               y := ((((- 2) * (200 - y)) + (+ (z - 2))) DIV (+ ((- 1223) + (- y))));
               y := ((((2 + 2) - (- x)) + ((1 DIV 1) - (1223 + 2))) MOD (- ((0 DIV 200) * (0 * 2))));
               z := (((+ (y MOD 0)) + ((+ 200) + (200 + y))) DIV (+ ((0 * 1223) MOD (2 - 200))));
               z := ((((z DIV x) MOD (- 0)) MOD ((0 * x) + (- 0))) - ((- (z - 2)) MOD ((x * 200) MOD (- z))));
               p := ((((z - x) + (2 + 1223)) # ((- 1) DIV (200 MOD 2))) & (~ ((- 2) > (z MOD 2))));
               y := ((((+ 1223) + (1 MOD 0)) + (- (+ x))) MOD (((200 DIV y) DIV (y - 2)) + ((1223 - z) - (x - 1))));
               p := ((((z DIV 1) - (- 1223)) DIV ((z DIV z) * (1 + y))) = (((200 - 0) * (+ 1)) - (- (x - x))))
END Test12.